# GreNade

./: .gitignore  CMakeLists.txt
Renders/: Sphere_with_diffuse.ppm  test.ppm
src/: Hittable.h  Hittable_list.cpp  Hittable_list.h  Lambertian.h  Main.cpp  Material.h  Metal.h  Ray.h  Sphere.cpp  Sphere.h  hit_record.h  vec3.h
src/Hittable/: Hittable.h  Hittable_list.cpp  hit_record.h
src/Materials/: Metal.h
src/Utility/: Camera.h  Ray.h  vec3.h
